--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 :root {
-  --font-size-sm: clamp(0.8rem, 0.17vw + 0.76rem, 0.89rem);
+--font-size-sm: clamp(0.8rem, 0.17vw + 0.76rem, 0.89rem);
 --font-size-base: clamp(1rem, 0.34vw + 0.91rem, 1.19rem);
 --font-size-md: clamp(1.25rem, 0.61vw + 1.1rem, 1.58rem);
 --font-size-lg: clamp(1.56rem, 1vw + 1.31rem, 2.11rem);
@@ -28,6 +28,7 @@ html {
 
 body {
   margin: 0;
+  font-size: var(--font-size-lg);
 }
 
 img {
@@ -112,3 +113,4 @@ img {
   color: white;
   padding: 2em 0;
 }
+
